web/themes/custom/mungo/assets_src/sass/layout/footer.scss
footer {
  .layout-container > & {
    overflow: hidden;
  }
}

#block-facebookpagesinfooter {
  margin-bottom:$spacing-large;
}

.footer_top {
  padding: 20px 0 30px;
}

// Three image.
.footer_bottom {
  .container {
    position: relative;
    &:after {
      @include media-small {
        content: '';
        background: url('../images/footer_tree_dummy_ikon.svg');
        background-repeat: no-repeat;
        background-position: 0 5px;
        height: 261px;
        width: 279px;
        display: block;
        position: absolute;
        right: -100px;
        bottom: 0;
      }
    }
  }
}

.menu--social-links {
  @include inline-menu;
  padding: 0;
  padding-top: $spacing-small;
}

.region-footer-social {
  padding: $spacing-large 0;
}

.menu--footer {
  ul {
    padding: 0;
  }
  li {
    list-style: none;
    line-height: 1.69;
  }
}

